@@ -1,5 +1,7 @@
 DIST lvtk-1.1.0.tar.gz 199401 SHA256 299aa61308965079874e115263bd8428049d674d8ffa4af3017f1af608813901 SHA512 00bdfcaaa5ac5311d597c80009c75832951a14c687096f921f2b692f86d8f68806b574369ad2b878b718a5b88f6a27c88c36410b7ff85a3b899b98524565a963 WHIRLPOOL c4bf96bce7b2092f43003ed4e92a914053344622853207ab9e8cac06386fe443175deffd6725f8e178137e78e430a3c3437a8e3398d6ddfea1ba232e73b95e65
+DIST lvtk-1.1.1.tar.gz 198754 SHA256 c36a341d2f72f18d8fd9eaaa1bf7fff88c546b18f1ec6395e2827ab73a02fecf SHA512 04adca3bfe75a8a2f95180d4187671d23957db6121d1be9b8e28de17605ff5d1a12878b2768643541f0db678449ab976e196f972c0d94bfca626f2ed2aa0b846 WHIRLPOOL 4f6c629f79fbab92e0e579c2071012c63c69aa7e9abd873ba1c596114396e5f0f3bef292e6246486dcf33c4ab1ef62915218f788ad6f0899c30dc6e41271bd28
 EBUILD lvtk-1.1.0.ebuild 1345 SHA256 bab49e5285e6df77f3f7c1a25be1fb6d6ce51f9b3cf5170abaffcc4f08ef82bc SHA512 53ccad1966583332d66b281b6209fd6feaf539072f9db3dd9a7957f53555bc3908493a15a0f4c4b5549a744e09cdafbbc964cf0883d5062fa9b0b7198fd9bb0a WHIRLPOOL f01b30823f092ec25ed101a663b8531b655c192a31d9baa5df3fd29b959863b96ee125a2d9fd90df0c0bdd89758e16d3f6ed6be6a1889ad70b2cf451727bd98b
+EBUILD lvtk-1.1.1.ebuild 1345 SHA256 bab49e5285e6df77f3f7c1a25be1fb6d6ce51f9b3cf5170abaffcc4f08ef82bc SHA512 53ccad1966583332d66b281b6209fd6feaf539072f9db3dd9a7957f53555bc3908493a15a0f4c4b5549a744e09cdafbbc964cf0883d5062fa9b0b7198fd9bb0a WHIRLPOOL f01b30823f092ec25ed101a663b8531b655c192a31d9baa5df3fd29b959863b96ee125a2d9fd90df0c0bdd89758e16d3f6ed6be6a1889ad70b2cf451727bd98b
 EBUILD lvtk-9999.ebuild 1355 SHA256 97f106c1ed01b218be8effa869f5ad9e766a608fbcb6d748cb600d39b10dbacf SHA512 312e7837af605cbb676dbbd19519d22c1f6fc12852a6585e4833641b35f95e2f5282acc25736f039945f370f29d5d24c2c5034882810655628fa49b3d87ab6ee WHIRLPOOL afab6c87b1c9c14c6fe8639ac32946fa27c28be936cfe439d27da7d415b35434dbf020f9e7a2944300d17bfb87626ce8e9e15652586f7e46a1ff2f6aa5f7db64
-MISC ChangeLog 990 SHA256 e8383eebbbd7eebe45e2cf5e7d484b3c5f54c0e8c80a9ff2f316cfa3d06a8e5c SHA512 fb8af65e0190ddb4674a764969dee9c63a5455bdab064e8e7e6e4022686015b7703173bf22f51b3033d7e8f3f1a3856e1dcfedaf6dbdcb8b9aef42b745009d04 WHIRLPOOL 53ef55203a7e1f39b6ca613af0da023acbea3d66c3bd098f1611aa751585f2eaf4c3fe73cceea6b141408d4791266a8b90cb0404b42cac836cfc3b8a169d97d0
+MISC ChangeLog 1158 SHA256 aa824f0c81ea9a114b4b00d42e55225e40f9e6a057c61405972ff30f79725a41 SHA512 7b8377f938ababb03619d6e2a37a364a5e775c757adbc91d3e8636d7d020026d5d80362ba8730fb765a766d763f44d038c54ce513d9e1e246922b6d8f4638e4e WHIRLPOOL afbf3fb0905e9f9eacba1ef9d38cf59cf82f474c5266c57ea6fbeca0be251b7f4392a6388533722e60201643496876cc96819a070c4f3524e23859f987f8887b
 MISC metadata.xml 547 SHA256 3da1b9f8977e7c2a463e2d9c9395880e07d6897a3d7ad64b385377dde9420924 SHA512 f158262d1240d9556efa5a8709b2fc7d8254a325d4c266742bfe8ce7fa685e9b1b12d0fc1fd2f207b39c3c4a2be9f860f8835df158bc0457b7feea6d7bbff864 WHIRLPOOL ba282dd3e40bdba5f921724a70fe79bd876f359a57555aacec24f07e658c1f169c775772a0b8ba4e02342fc80fd76b47a7eb08b2854fa640a9616a2ca678f8f5
