@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lvtk-1.1.1 (03 Nov 2013)
+
+  03 Nov 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  +lvtk-1.1.1.ebuild:
+  Version bump. Thanks to Matt Henley for reporting.
+
   28 Apr 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   lvtk-1.1.0.ebuild, lvtk-9999.ebuild:
   Do not fix documentation install directory if documentation is not built.
